opam-version: "2.0"
maintainer: "Dakota Murphy <dakotamurphyucf@gmail.com>"
license: "BSD-3-clause"
name: "websocketzilla-async"
homepage: "https://github.com/dakotamurphyucf/zillaml"
bug-reports: "https://github.com/dakotamurphyucf/zillaml/issues"
dev-repo: "git+https://github.com/dakotamurphyucf/zillaml.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "websocketaf"
  "dune"
  "faraday-async"
  "async"
  "digestif"
  "base64"
]
synopsis: "Async support for websocketzilla"