opam-version: "2.0"
maintainer: "Dakota Murphy <dakotamurphyucf@gmail.com>"
license: "BSD-3-clause"
name: "zillaml-async"
homepage: "https://github.com/dakotamurphyucf/zillaml"
bug-reports: "https://github.com/dakotamurphyucf/zillaml/issues"
dev-repo: "git+https://github.com/dakotamurphyucf/zillaml.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "faraday-async"
  "async"
  "httpaf" {>= "0.6.0"}
]
depopts: ["async_ssl"]
synopsis:
  "Async support for zillaml"
