opam-version: "2.0"
maintainer: "Dakota Murphy <dakotamurphyucf@gmail.com>"
license: "BSD-3-clause"
homepage: "https://github.com/dakotamurphyucf/zillaml"
bug-reports: "https://github.com/dakotamurphyucf/zillaml/issues"
dev-repo: "git+https://github.com/dakotamurphyucf/zillaml.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "alcotest" {with-test}
  "bigstringaf" {>= "0.4.0"}
  "angstrom" {>= "0.9.0"}
  "faraday"  {>= "0.6.1"}
  "result"
]
synopsis:
  "A high-performance, memory-efficient, and scalable web server for Reason/OCaml"
description: """
zillaml implements the HTTP 1.1 specification with respect to parsing,
serialization, and connection pipelining as a state machine that is agnostic to
the underlying IO mechanism, and is therefore portable across many platform.
It uses the Angstrom and Faraday libraries to implement the parsing and
serialization layers of the HTTP standard, hence the name."""